# grpc-cmake-example

./: CMakeLists.txt  common.proto  ingestion.proto
.github/workflows/: build.yml
